--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,7 @@
-github_users:
-  - torvalds
-  - alshedivat
+#github_users:
+#  - torvalds
+#  - alshedivat
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - Library-Light-Twin-DSD2023-MDU-POLIMI/digital-twin-dsd-backend
+  - Library-Light-Twin-DSD2023-MDU-POLIMI/digitaltwin
