--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ spotify_id: # your spotify id
 pinterest_id: # your pinterest id
 unsplash_id: # your unsplash id
 instagram_id: jmnezred # your instagram id
-facebook_id: # your facebook id
+facebook_id: jmnezred # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
