--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,13 @@ last_name: Redondo
 #email: none@none.null
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   My personal website. Contact info, and cool stuff I find goes here :)
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+footer_text: 
+  en: >
+    Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+    Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+  es: >
+    Pagina creada con <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> usando el tema <a href="https://github.com/alshedivat/al-folio">al-folio</a>.
+    Alojado en <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: curriculum, cv, portfolio, nezred, jmnezred, website, blog # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 #icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -49,7 +53,7 @@ navbar_fixed: true
 footer_fixed: true
 
 # Dimensions
-max_width: 800px
+max_width: 896px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -103,9 +107,14 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
-contact_note: >
-  I don't check twitter, Facebook, or LinkedIn that much, so you wont be able to find me there easily 
-  (although i get emails from LinkedIn if someone contacts me)
+contact_note: 
+  en: >
+    I don't check twitter, Facebook, or LinkedIn that much, so you wont be able to find me there easily 
+    (although i get emails from LinkedIn if someone contacts me)
+  es: >
+    No suelo mirar ni twitter, Facebook o LinkedIn mucho, asi que no me podrás 
+    encontrar fácilmente allí (aunque de vez en cuando me llegan emails de 
+    LinkedIn si alguien me contacta)
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -241,6 +250,7 @@ plugins:
   - jekyll-toc
   - jekyll-twitter-plugin
   - jemoji
+  #- jekyll-polyglot
 
 # Sitemap settings
 defaults:
@@ -251,6 +261,15 @@ defaults:
 
 sass:
   style: compressed
+
+# -----------------------------------------------------------------------------
+# Jekyll Polyglot
+# -----------------------------------------------------------------------------
+
+languages: ["en", "es"]
+default_lang: "en"
+exclude_from_localization: ["_sass", "_includes", "_plugins", "assets", "reports"]
+parallel_localization: true
 
 # -----------------------------------------------------------------------------
 # Jekyll Minifier
