remove github actions

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -1,17 +1,17 @@
 name: Docker Image CI
 
-on:
-  push:
-    branches:
-      - master
-      - main
-    paths:
-      - "bin/entry_point.sh"
-      - "Dockerfile"
-      - "Gemfile"
-      - "Gemfile.lock"
-      - "package.json"
-      - "package-lock.json"
+# on:
+#   push:
+#     branches:
+#       - master
+#       - main
+#     paths:
+#       - "bin/entry_point.sh"
+#       - "Dockerfile"
+#       - "Gemfile"
+#       - "Gemfile.lock"
+#       - "package.json"
+#       - "package-lock.json"
 
 jobs:
   build:
